# daia

./: .clang-format  .clangd  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md
.github/: copilot-instructions.md
src/app/: CMakeLists.txt  app.hpp  main.cpp
src/player/: CMakeLists.txt  app.hpp  main.cpp  pipeline.hpp  window.hpp
src/player/common/: texture.hpp  util.hpp
src/player/content/: content.hpp  content_base.hpp  empty_content.hpp  video_content.hpp
src/player/media/: video.hpp
src/player/pipeline/: helpers.hpp  pipeline.hpp  viewport.hpp
src/player/pipeline/shader/: pane.frag  pane.vert
src/player/shader/: triangle.frag
src/util/: image.hpp  util.hpp
